--- a/src/components/SearchResults/SearchResults.module.scss
+++ b/src/components/SearchResults/SearchResults.module.scss
@@ -37,14 +37,20 @@
   }
 }
 
-@media (max-width: 1146px) {
-  .search-results-panel {
-    padding-top: 2.75rem;
-  }
-}
+// @media (max-width: 1146px) {
+//   .search-results-panel {
+//     padding-top: 2.75rem;
+//   }
+// }
 
-@media (max-width: 810px) {
-  .search-results-panel {
-    padding-top: 4.1rem;
-  }
-}
+// @media (max-width: 810px) {
+//   .search-results-panel {
+//     padding-top: 4.1rem;
+//   }
+// }
+
+// @media (max-width: 700px) {
+//   .search-results-panel {
+//     width: 90vw;
+//   }
+// }
